ajout du schema.org

--- a/index.html
+++ b/index.html
@@ -13,8 +13,72 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<!-- <link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet"> -->
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,300;0,800;1,300&display=swap" rel="stylesheet">
-
-
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "Person",
+		  "name": "Nina Carducci",
+		  "url": "http://portfolio.fabwebprojects.fr/NinaCarducci",
+		  "sameAs": [
+			"https://www.instagram.com/ninacarducci.photo"
+		  ],
+		  "jobTitle": "Photographe professionnelle",
+		  "gender": "Female",
+		  "email": "contact@nina-carducci-photographie.fr",
+		  "image": "./assets/images/nina.webp",
+		  "worksFor": {
+			"@type": "LocalBusiness",
+			"name": "Nina Carducci Photography Studio",
+			"address": {
+			  "@type": "PostalAddress",
+			  "streetAddress": "68 avenue Alsace-Lorraine",
+			  "addressLocality": "Bordeaux",
+			  "postalCode": "33200",
+			  "addressCountry": "FR"
+			},
+			"telephone": "+33556677889",
+			"openingHoursSpecification": [
+			  {
+				"@type": "OpeningHoursSpecification",
+				"dayOfWeek": "https://schema.org/Monday",
+				"opens": "10:00",
+				"closes": "19:00"
+			  },
+			  {
+				"@type": "OpeningHoursSpecification",
+				"dayOfWeek": "https://schema.org/Tuesday",
+				"opens": "10:00",
+				"closes": "19:00"
+			  },
+			  {
+				"@type": "OpeningHoursSpecification",
+				"dayOfWeek": "https://schema.org/Wednesday",
+				"opens": "10:00",
+				"closes": "19:00"
+			  },
+			  {
+				"@type": "OpeningHoursSpecification",
+				"dayOfWeek": "https://schema.org/Thursday",
+				"opens": "10:00",
+				"closes": "19:00"
+			  },
+			  {
+				"@type": "OpeningHoursSpecification",
+				"dayOfWeek": "https://schema.org/Friday",
+				"opens": "10:00",
+				"closes": "19:00"
+			  }
+			],
+			"geo": {
+			  "@type": "GeoCoordinates",
+			  "latitude": "44.837789",
+			  "longitude": "-0.57918"
+			},
+			"image": "./assets/images/camera.webp",
+			"description": "Studio de photographie professionnel offrant des services de photographie de portrait, d'événements et commerciale à Bordeaux."
+		  }
+		}
+		</script>
 </head>
 <body>
 <div class="top-header">
