--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <body>
 	<header class="top-header">
 		<h1 class="name">Nina Carducci</h1>
-		<div class="nav">   
+		<nav class="nav">   
 			<ul>
 				<li><a href="#about">À propos</a></li>
 				<li><a href="#gallery">Galerie</a></li>
@@ -107,7 +107,7 @@
 				<li><a href="#contact">Contact</a></li>
 				<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt="instagram"></a></li>
 			</ul>
-		</div>
+		</nav>
 	</header>
 	<main>
 		<div id="header">
